# codecrafters-shell

./: Cargo.toml  README.md  file  sami é gay  teste
src/: main.rs
